# Python_package

./: README.md  pyproject.toml
src/char_counter/: char_counter.py
tests/: test_char_counter.py
